# read-mate

./: .gitignore  AGENTS.md  AI.md  CLAUDE.md  Claude-Folder-Structure.md  GEMINI.md  Plan-Pipeline.md  Plan-TechStack.md  README.md  SKILL.md  app.py  gpt_정리내용.md  main.py  pyproject.toml  setup.md  test_ocr.py
.claude/: CLAUDE.md  settings.local.json
.codex/: AGENTS.md
.gemini/: GEMINI.md
backend/: main.py
data/static_tts/: README.md  manifest.json
data/text/: zonos_article_sample.txt
frontend/: app.py  job_runner.py  requirements.txt  speak_js.py  styles.py
frontend/components/: qa_panel.py  quiz_panel.py  result_panel.py  summary_panel.py  tts_panel.py
frontend/pages/: lecture_audio.py  lecture_material.py  voice_settings.py
frontend/services/: llm_service.py  mock_service.py  ocr_service.py  stt_service.py  tts_service.py
notebooks/: hello_world.ipynb  readmate_stt.ipynb  stt_prep.ipynb
notebooks/hyunwook/: OCR_test.ipynb  TEST_STATUS.md  test_summary.md  test_tts.ipynb
notebooks/janiebooks/: audio.py
scripts/: app.py  check_voice.py  generate_static_tts.py  register_voices.py  run_llm_check.py  start.bat  start.sh  start_app.bat  start_app.sh  start_server.bat  start_server.sh  test_llm_server.py  test_ocr.py  test_ocr_pdf_sample.py  test_tts_endpoint.py
src/: base.py  input.py  llm.py  ocr.py  pipeline.py  preprocess.py  tts.py  ui.py
src/api/: client.py  llm_factory.py  schemas.py
src/api/routes/: http.py  tts.py  websocket.py
src/core/: config.py  exceptions.py
src/lib/utils/: path.py
src/models/: schemas.py
src/pipelines/: __init__.py  reading_pipeline.py
src/services/: __init__.py  base.py  hwp_service.py  llm.py  llm_base.py  llm_gemma.py  llm_openai.py  llm_qwen.py  llm_remote.py  memo_service.py  ocr_service.py  pdf_service.py  static_tts_cache.py  stt_service.py  stt_whisper_service.py  tts_edge.py  tts_elevenlabs.py  tts_factory.py  tts_kokoro.py  tts_mms.py  tts_service.py  tts_unavailable.py  tts_zonos.py
src/tools/: play_zonos_segments.py  register_zonos_voices.py
src/zonos/: conditioning.py  config.py  model.py  speaker_cloning.py
src/zonos/backbone/: __init__.py  _mamba_ssm.py  _torch.py
tests/: test_app.py  test_chatbot.py  test_elevenlabs.py  test_frontend_pipeline_service.py  test_llm_real.py  test_llm_remote.py  test_memo_service.py  test_pipeline_logic.py  test_reading_pipeline.py  test_stt_real.py  test_stt_whisper.py  test_tts_kokoro.py  test_tts_models_real.py  test_tts_real.py  test_tts_voice_listing.py  test_tts_zonos.py
